[tool.poetry]
name = "groundzero"
version = "0.1.0"
description = ""
authors = ["saji <champ189@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyqtgraph = "^0.13.1"
pyside6 = "^6.4.1"
scipy = "^1.9.3"
pandas = "^1.5.2"
jax = "^0.3.25"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "^1.5.2.221124"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
